# EffiSync

./: .gitignore  LICENSE  README.md  app.py  auth.env  build.py  pyproject.toml  questions.md  requirements.txt  setup.py
app/: MainWindow.py  app.py  booking.py  config.py  connect.py  database_handler.py  index.py  resources_rc.py  sap_handler.py  security.py  time_tracker.py  web_handler.py
app/db/: connect.py  database_handler.py  database_template.ini  demo.py  test.db
app/gui/: __init__.py  iconsDark_rc.py
app/gui/baseClass/: confirmationDialog.py  loginPopup.py  mainApp.py  projectActions.py  projectModifyDialog.py  recordActions.py  recordModifyDialog.py  topicModifyDialog.py
app/gui/extendedClass/: confirmationDialogControl.py  loginPopupControl.py  projectActionsBtnControl.py  projectModifyDialogControl.py  recordActionsBtnControl.py  recordModifyDialogControl.py  topicActionsBtnControl.py  topicModifyDialogControl.py
app/network/: app.py  network_client.py  network_manager.py
app/sapi/: sap_handler.py
gui/: MainWindow.ui  resources.qrc
gui/app/baseClass/: mainApp.py
gui/app/extendedClass/: confirmationDialogControl.py  loginPopupControl.py  recordActionsBtnControl.py  recordModifyDialogControl.py
gui/qtProjects/: confirmationDialog.ui  controlPane.ui  controlPane_ui.py  editProject.ui  editTopic.ui  headBar.ui  headBar_ui.py  loginPopup.ui  loginPopup_ui.py  mainUI.ui  mainUI_ui.py  mainUIbak.ui  modifyProject.ui  modifyRecord.ui  recordActions.ui  recordActions_ui.py  sideNavBar.ui  sideNavBar_ui.py
gui/resources/icons/dark/: iconsDark.qrc
gui/resources/icons/light/: iconsLight.qrc  iconsLight_rc.py  icons_rc.py
